--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
-    "@angular/ssr": "^20.1.4",
+    "@angular/ssr": "^20.2.2",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@vercel/node": "^5.3.21",
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
