--- a/angular.json
+++ b/angular.json
@@ -19,8 +19,6 @@
           "options": {
             "browser": "src/main.ts",
             "polyfills": [],
-            "prerender": false,
-
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -48,8 +46,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "2mb",
+                  "maximumError": "3mb"
                 },
                 {
                   "type": "anyComponentStyle",
