--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.4",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@google/genai": "^1.29.0",
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
     "ngx-owl-carousel-o": "^20.0.1",
