--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@angular/ssr": "^20.1.4",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@google/genai": "^1.29.0",
+    "@ngrx/store": "^20.1.0",
+    "@ngrx/store-devtools": "^20.1.0",
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
     "ngx-owl-carousel-o": "^20.0.1",
