--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,27 @@
 {
-  "version": 3,
+  "version": 2,
   "builds": [
-    { "src": "dist/browser/**", "use": "@vercel/static" },
-    { "src": "dist/server/server.mjs", "use": "@vercel/node" }
+    {
+      "src": "dist/server/server.mjs",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "dist/browser/**",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
     {
       "src": "/assets/(.*)",
-      "dest": "/browser/assets/$1"
+      "dest": "/dist/browser/assets/$1"
     },
     {
-      "src": "/.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot)$",
-      "dest": "/browser/$0"
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
+      "dest": "/dist/browser/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/server/server.mjs"
+      "dest": "/dist/server/server.mjs"
     }
   ]
 }
