--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,6 @@
     {
       "src": "dist/server/server.mjs",
       "use": "@vercel/node"
-    },
-    {
-      "src": "dist/browser/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -16,8 +12,8 @@
       "dest": "/dist/browser/assets/$1"
     },
     {
-      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
-      "dest": "/dist/browser/$1"
+      "src": "/.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot)$",
+      "dest": "/dist/browser/$0"
     },
     {
       "src": "/(.*)",
