--- a/angular.json
+++ b/angular.json
@@ -59,8 +59,7 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all",
-              "outputPath": "dist/browser"
+              "outputHashing": "all"
             },
             "development": {
               "optimization": false,
