--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,8 @@
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
             ],
             "server": "src/main.server.ts",
+            "prerender": true,
+
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
