--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/assets/robots.txt",
               {
                 "glob": "**/*",
                 "input": "public"
