--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:Mymovie": "node dist/Mymovie/server/server.mjs"
+    "serve:ssr": "node dist/Mymovie/server/server.mjs",
+    "postinstall": "ng build --configuration production"
   },
   "prettier": {
     "overrides": [
