edit vecel configuration

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr": "node dist/Mymovie/server/server.mjs",
-    "postinstall": "ng build --configuration production"
+    "postinstall": "ng build --configuration production",
+    "build:ssr": "ng build && ng run Mymovie:server",
+    "start:ssr": "node dist/Mymovie/server/server.mjs"
   },
   "prettier": {
     "overrides": [
